# cube-solver

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  ckociemba.c  csolvermodule.c  cutils.c  pyproject.toml  queue.c  requirements_dev.txt  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  cube_solver.cli.rst  cube_solver.constants.rst  cube_solver.cube.face.rst  cube_solver.cube.rst  cube_solver.rst  cube_solver.solver.dummy.rst  cube_solver.solver.kociemba.rst  cube_solver.solver.korf.rst  cube_solver.solver.rst  cube_solver.solver.thistlethwaite.rst  installation.rst  modules.rst  readme.rst  usage.rst
examples/: example_usage.py
include/: ckociemba.h  cutils.h  queue.h
src/cmodules/: csolvermodule.c  cutils.c  kociemba.c  solvermodule.c
src/cube_solver/: __init__.py  cli.py  constants.py  cube.py  defs.py  logger.py  main.py  solver.py
src/cube_solver/cube/: __init__.py  cube.py  defs.py  enums.py  maneuver.py  utils.py
src/cube_solver/solver/: __init__.py  defs.py  dummy.py  kociemba.py  korf.py  solver.py  thistlethwaite.py  utils.py
tests/: test_cli.py  test_cube.py  test_cube_solver.py  test_enums.py  test_main.py  test_solver.py
