[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cube_solver"
version = "0.1.0"
description = "Rubik's Cube Solver"
readme = "README.rst"
authors = [
  {name = "Dave Barragan", email = "itsdaveba@gmail.com"}
]
maintainers = [
  {name = "Dave Barragan", email = "itsdaveba@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/itsdaveba/cube_solver/issues"
changelog = "https://github.com/itsdaveba/cube_solver/blob/master/changelog.md"
homepage = "https://github.com/itsdaveba/cube_solver"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

